--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti/dist/tsparticles.preset.confetti.bundle.min.js"></script>
     <link rel="stylesheet" href="test.css">
     <script defer src="test.js"></script>
 
