--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<html>
-
+<html lang="en">
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 	<script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti/dist/tsparticles.preset.confetti.bundle.min.js"></script> -->
-    <link rel="stylesheet" href="test.css">
-    <script defer src="test.js"></script>
+	<link href="test.css" rel="stylesheet">
+	<script defer src="test.js"></script>
+
 
 </head>
 
 <body>
-    <button id="btnParty" type="button">Party!!</button>
-    <div id="tsparticles"></div>
-</body>
-
-</html>
+	<button id="btnParty" type="button">Party</button>
+	<div id="tsparticles"></div>
