--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@
 			(i) <strong style="color:green;">TENIZ</strong> is a spin-off on <strong style="color:red;">WORDLE</strong>, to test your knowledge on Tennis Grand Slam Champions of the Open Era.
 			The objective is to identify the Tennis Player every day using the <strong style="color:green;">least number of clues.</strong>
 			<br><br>
-			(ii) Your <strong style="color:red;">First Clue </strong>is in the number of letters in the players first and last names. 
-			For most days, this is the only clue needed :), if you know your Tennis well.
+			(ii) Your <strong style="color:green;">First Clue </strong>is in the number of letters in the players first and last names 😀. 
 			<br><br>			
 			(iii) Use the on-screen keyboard to key in your answer. Hit Enter to submit. A new clue will be revelaed
 			after each <strong style="color:red;">INCORRECT</strong> guess. 
 			<br><br>
-			(iv)Look for the disapperaing Tennis Balls on the screen for the clues.
+			(iv) Look for the disapperaing Tennis Balls on the screen for the clues.
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
 			<br><br>
 			(v) Hints include Year, Slam, Nationality, Gender, First Name First Letter and Last Name First Letter.
@@ -181,9 +180,8 @@
 				</div>
 			</div>
 		</div><br>
-		<div><a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" class="twitter-follow-button"
-				data-show-count="false">Follow @TenizGame</a>
-			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<div><a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @TenizGame</a>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>			
 		</div>
 		<br>
 	</div>
