--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 		<span style="--i:19">d</span>
 		<span style="--i:20">a</span>
 		<span style="--i:21">y</span>
+		<span style="--i:22">-</span>
+		<span style="--i:23">D</span>
+		<span style="--i:24">A</span>
+		<span style="--i:25">Y</span>
+		<span style="--i:26" id="daycount"></span>
 	</div>
 	<!-- <div id="mycounter"></div> -->
 	<!-- <button data-modal-target="#modal">Start Game</button>  -->
@@ -102,30 +107,29 @@
 			<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class="modal-body">
-			(i) <strong style="color:green;">TENIZ</strong> is a spin-off on <strong style="color:red;">WORDLE</strong>, to test your knowledge on Tennis Grand Slam Champions of the Open Era.
-			The objective is to identify the Tennis Player every day using the <strong style="color:green;">least number of clues.</strong>
+			(i) <strong style="color:white;">TENIZ</strong> is a spin-off on <strong style="color:white;">WORDLE</strong>, to test your knowledge on Tennis Grand Slam Champions of the Open Era.
+			The objective is to identify the Tennis Player every day using the <strong style="color:white;">Least Number Of Clues.</strong>
 			<br><br>
-			(ii) Your <strong style="color:green;">First Clue </strong>is in the number of letters in the players first and last names 😀. 
+			(ii) Your <strong style="color:white;">Starting Clue </strong>is in the number of letters in the players First and Last Names 😀. 
 			<br><br>			
 			(iii) Use the on-screen keyboard to key in your answer. Hit Enter to submit. A new clue will be revelaed
-			after each <strong style="color:red;">INCORRECT</strong> guess. 
+			after each <strong style="color:white;">INCORRECT</strong> guess. 
 			<br><br>
-			(iv) Look for the disapperaing Tennis Balls on the screen for the clues.
+			(iv) Hints include Year, Slam, Country, Gender, Total GS Singles Titles and Style of Play (RH vs LH).	
+			Clues are revealed as shown below. 
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
-			<br><br>
-			(v) Hints include Year, Slam, Nationality, Gender, First Name First Letter and Last Name First Letter.
-			<br><br>
-			(vi) A <strong style="color:green;">Green Tile </strong>highlight indicates that the right letter is at the
+			<br>
+			(v) A <strong style="color:green;">Green Tile </strong>highlight indicates that the right letter is at the
 			right position, while a <strong style="color:yellow;">Yellow Tile </strong>highlight indicates that the
 			right letter is at the wrong position. First and Last name are evaluated separately.
 			<br><br>
-			(vii) An <strong style="color:orange;">Orange Key </strong>highlight indicates a letter part of the name yet
+			(vi) An <strong style="color:orange;">Orange Key </strong>highlight indicates a letter part of the name yet
 			to be correctly placed . <strong style="color:green;">Green Letter Tracker</strong> helps keep track of
 			correctly placed letters.
 			<br>
 			<h5>
 				<center>Legend :AO - Australian Open | FO - French Open | WIM - Wimbledon | USO - US
-					Open | FN FL - First Name 1st Letter | LN FL - Last Name 1st Letter
+					Open | GS - Grand Slam | RH - Right Handed | LH - Left Handed
 			</h5>
 			</center>
 			<center>
