--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 	<input  onKeyUp="handleKeyUp(5);" type="text" name="functioninput" id="answertext" placeholder="Enter player Name" >
 	<input type="submit" name="submit" id="submitbutton" disabled="disabled" /><br>
 	<!-- <select onClick="handleSelectClick();" name="functionselect" size="20" style="font-size:10pt;width:34ex;"> -->
-	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="5" style="font-size:10pt;width:34ex;"  ></select>
+	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="5" style="font-size:10pt;width:34ex;" class="form-control" ></select>
 	</form>	
 	<br><br>
 </body>
