--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	<hr>
 	<br>
 	<div id="board">
-		<div id="glt">ANSWER TRACKER</strong></div><br>		
+		<div id="glt">1</strong></div><br>		
 		<div id="try1"></div><br>
 		<div id="try2"></div><br>
 		<div id="try3"></div><br>
@@ -218,10 +218,10 @@
 	<input type="submit" name="submit" onclick="submitMe()" id="submitbutton"/> -->
 	<form action="#" onsubmit="submitMe();return false">
 	<!-- <input onKeyUp="handleKeyUp(20);" type="text" name="functioninput" VALUE="" style="font-size:10pt;width:34ex;"><br> -->
-	<input  onKeyUp="handleKeyUp(5);" type="text" name="functioninput" id="answertext" placeholder="Enter player Name" >
+	<input  onKeyUp="handleKeyUp(1);" type="text" name="functioninput" id="answertext" placeholder="Enter player Name" >
 	<input type="submit" name="submit" id="submitbutton" disabled="disabled" /><br>
 	<!-- <select onClick="handleSelectClick();" name="functionselect" size="20" style="font-size:10pt;width:34ex;"> -->
-	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="5" style="font-size:10pt;width:34ex;" class="form-control" ></select>
+	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="1" style="font-size:10pt;width:34ex;" class="form-control" hidden></select>
 	</form>	
 	<br><br>
 </body>
