--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
-
 <head>
+	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=yes;" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-B1TW81HLYQ"></script>
 	<script>
@@ -221,7 +221,7 @@
 	<input  onKeyUp="handleKeyUp(1);" type="text" name="functioninput" id="answertext" placeholder="Enter player Name" >
 	<input type="submit" name="submit" id="submitbutton" disabled="disabled" /><br>
 	<!-- <select onClick="handleSelectClick();" name="functionselect" size="20" style="font-size:10pt;width:34ex;"> -->
-	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="1" style="font-size:10pt;width:34ex;" class="form-control" hidden></select>
+	<textarea  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="1" style="font-size:10pt;width:34ex;" class="form-control" hidden></textarea>
 	</form>	
 	<br><br>
 </body>
