--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=yes;" />
     </head>
     <body>
         <select name="cars" id="cars">
