--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	<hr>
 	<br>
 	<div id="board">
-		<div id="glt">1</strong></div><br>		
+		<div id="glt"></div><br>		
 		<div id="try1"></div><br>
 		<div id="try2"></div><br>
 		<div id="try3"></div><br>
