--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
 	<input type="submit" name="submit" onclick="submitMe()" id="submitbutton"/> -->
 	<form action="#" onsubmit="submitMe();return false">
 	<!-- <input onKeyUp="handleKeyUp(20);" type="text" name="functioninput" VALUE="" style="font-size:10pt;width:34ex;"><br> -->
-	<input  onKeyUp="handleKeyUp();" type="text" name="functioninput" id="answertext" placeholder="Enter player Name" >
+	<input  onKeyUp="handleKeyUp(5);" type="text" name="functioninput" id="answertext" placeholder="Enter player Name" >
 	<input type="submit" name="submit" id="submitbutton" disabled="disabled" /><br>
 	<!-- <select onClick="handleSelectClick();" name="functionselect" size="20" style="font-size:10pt;width:34ex;"> -->
-	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="3" style="font-size:10pt;width:34ex;" class="form-control" hidden></select>
+	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="5" style="font-size:10pt;width:34ex;" class="form-control" hidden></select>
 	</form>	
 	<br><br>
 </body>
