--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	<form action="#" onsubmit="submitMe();return false">
 	<!-- <input onKeyUp="handleKeyUp(20);" type="text" name="functioninput" VALUE="" style="font-size:10pt;width:34ex;"><br> -->
 	<input  onKeyUp="handleKeyUp(5);" type="text" name="functioninput" id="answertext" placeholder="Enter player Name" >
-	<input type="submit" name="submit" id="submitbutton" disabled="disabled" /><br>
+	<input type="submit" name="submit" id="submitbutton" /><br>
 	<!-- <select onClick="handleSelectClick();" name="functionselect" size="20" style="font-size:10pt;width:34ex;"> -->
 	<select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="5" style="font-size:10pt;width:34ex;" class="form-control" hidden></select>
 	</form>	
