--- a/index.html
+++ b/index.html
@@ -1,17 +1,228 @@
-<html>
-<link rel="stylesheet" href="test.css">
-<script src="test.js"></script>
+<html lang="en">
 <head>
-
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-B1TW81HLYQ"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'G-B1TW81HLYQ');
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+	<!-- 	<script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
+	<script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti/dist/tsparticles.preset.confetti.bundle.min.js"></script> -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti@1.22.0/tsparticles.preset.confetti.bundle.min.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>TENIZ - Tennis Quiz of GS Champions </title>
+	<link href="teniz.css" rel="stylesheet">
+	<script defer src="teniz.js"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+	<!-- FB Meta Tags -->
+	<meta property="og:url" content="https://tenizgame.github.io/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="TENIZ - Tennis Quiz of GS Champions">
+	<meta property="og:description"
+		content="Identify the Tennis Player using the clues. A new player is available each day.">
+	<meta property="og:image" content="https://tenizgame.github.io/tennisicon.jpg">
+	<!-- add icon link -->
+	<link rel="icon" href="https://tenizgame.github.io/tennisicon.jpg" type="image/x-icon">
+	<link href="https://tenizgame.github.io/tennisicon.jpg" rel="icon shortcut" />
+	<link href="https://tenizgame.github.io/tennisicon.jpg" rel="apple-touch-icon" />
+	<link rel="manifest" href="https://tenizgame.github.io/teniz_manifest.json" />
 </head>
 
 <body>
-    <h1>JavaScript live search</h1>
-    <form autocomplete="off"><input type="text" name="q" id="q" onKeyUp="showResults(this.value)" />
-        <input type="submit" name="submit" id="submitbutton" onclick=""/><br>
-        <div id="result">
-        </div>
-        </form>
+	<button id="btnParty" type="button" hidden></button>
+	<div id="tsparticles"></div>
+	<div id="title">
+		<div class="waviy1">
+			<span style="--i:1">T</span>
+			<span style="--i:2">E</span>
+			<span style="--i:3">N</span>
+			<span style="--i:4">I</span>
+			<span style="--i:5">Z</span>
+		</div>
+		<div id="stats">
+			<div id="stats-item">
+				<span id="60" class="stats-item">
+					<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.jpg">
+				</span>
+				<span id="70" class="stats-item">
+					<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.jpg">
+				</span>
+			</div>
+		</div>
+	</div>
+	<br>
+	<div class="waviy">
+		<span style="--i:1">A</span>
+		<span style="--i:2"> </span>
+		<span style="--i:3">N</span>
+		<span style="--i:4">e</span>
+		<span style="--i:5">w</span>
+		<span style="--i:6"> </span>
+		<span style="--i:7">P</span>
+		<span style="--i:8">l</span>
+		<span style="--i:9">a</span>
+		<span style="--i:10">y</span>
+		<span style="--i:11">e</span>
+		<span style="--i:12">r</span>
+		<span style="--i:13"> </span>
+		<span style="--i:14">E</span>
+		<span style="--i:15">v</span>
+		<span style="--i:16">e</span>
+		<span style="--i:17">r</span>
+		<span style="--i:18">y</span>
+		<span style="--i:19">d</span>
+		<span style="--i:20">a</span>
+		<span style="--i:21">y</span>
+		<span style="--i:22">-</span>
+		<span style="--i:23">D</span>
+		<span style="--i:24">A</span>
+		<span style="--i:25">Y</span>
+		<span style="--i:26" id="daycount"></span>
+	</div>
+	<!-- <div id="mycounter"></div> -->
+	<!-- <button data-modal-target="#modal">Start Game</button>  -->
+	<!--&nbsp; &nbsp;  MODE :-     <input type="button" id="mode" value="EASY" onclick="toggle(this); "></center>-->
+	<!-- &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;  -->
+	<!--<button onclick="onTimer()">Clickme</button>-->
+	<div class="modal" id="modal">
+		<div class="modal-header">
+			<div class="title"><strong>
+					<!-- How To Play -->
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<h3 class="animate-charcter">How To Play</h3>
+							</div>
+						</div>
+					</div>
+				</strong></div>
+			<button data-close-button class="close-button">&times;</button>
+		</div>
+		<div class="modal-body">
+			(i) <strong style="color:white;">TENIZ</strong> is a spin-off on <strong style="color:white;">WORDLE</strong>, to test your knowledge on Tennis Grand Slam Champions of the Open Era.
+			The objective is to identify the Tennis Player every day using the <strong style="color:white;">Least Number Of Clues.</strong>
+			<br><br>
+			(ii) Your <strong style="color:white;">Starting Clue </strong>is in the number of letters in the players First and Last Names 😀. 
+			<br><br>			
+			(iii) Use the on-screen keyboard to key in your answer. Hit Enter to submit. A new clue will be revelaed
+			after each <strong style="color:white;">INCORRECT</strong> guess. 
+			<br><br>
+			(iv) Hints include Year, Slam, Country, Gender, Total GS Singles Titles and Style of Play (RH vs LH).	
+			Clues are revealed as shown below. 
+			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
+			<br>
+			(v) A <strong style="color:green;">Green Tile </strong>highlight indicates that the right letter is at the
+			right position, while a <strong style="color:yellow;">Yellow Tile </strong>highlight indicates that the
+			right letter is at the wrong position. First and Last name are evaluated separately.
+			<br><br>
+			(vi) An <strong style="color:orange;">Orange Key </strong>highlight indicates a letter part of the name yet
+			to be correctly placed . <strong style="color:green;">Green Letter Tracker</strong> helps keep track of
+			correctly placed letters.
+			<br>
+			<h5>
+				<center>Legend :AO - Australian Open | FO - French Open | WIM - Wimbledon | USO - US
+					Open | GS - Grand Slam | RH - Right Handed | LH - Left Handed
+			</h5>
+			</center>
+			<center>
+				<div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div>
+			</center>
+		</div>
+	</div>
+	<div class="summary" id="summary">
+		<div class="summary-header">
+			<div class="title"><strong>
+					<!-- Statistics -->
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<h3 class="animate-charcter">Statistics</h3>
+							</div>
+						</div>
+					</div>
+				</strong></div>
+			<button data-close1-button class="close-button">&times;</button>
+		</div>
+		<div class="summary-body">
+			<div id="stats-item">
+				<span id="6" class="summary-item"></span>
+				<span id="7" class="summary-item"></span>
+				<span id="8" class="summary-item"></span>
+				<span id="9" class="summary-item"></span>
+			</div>
+			<br>
+			<br>
+			<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+			<br>
+
+			<!-- The button used to copy the text -->
+			<div class="button-row">
+				&nbsp;
+				<button id="HTMLButton" class="buttonrad" onclick="myFunction()">Share Stats🔊</button>
+				&nbsp; &nbsp; &nbsp; &nbsp;
+				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad"
+						id="CoffeButton" value="Buy Me a Coffee❤️" /><a>
+			</div>
+		</div>
+		<hr>
+		<div id="footer">
+			<div>
+				<div id="bbhdr">New Game In</div>
+				<div id="bb"></div>
+			</div>
+			<div>
+				<div id="pzlhdr">Try a different puzzle.</div>
+				<div id="pzl"><b><a href="https://indlegame.github.io/indle" target="_">Play <u>INDLE</u> 🇮🇳 </a></b>
+				</div>
+			</div>
+		</div><br>
+		<div><a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @TenizGame</a>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>			
+		</div>
+		<br>
+	</div>
+	<div id="overlay"></div>
+	<div id="overlay1"></div>
+	<hr>
+	<div id="clue">
+		<div id="clue-ball">
+		</div>
+	</div>
+	<hr>
+	<br>
+	<div id="board">
+		<div id="glt"></div><br>		
+		<div id="try1"></div><br>
+		<div id="try2"></div><br>
+		<div id="try3"></div><br>
+		<div id="try4"></div><br>
+		<div id="try5"></div><br>
+		<div id="try6"></div><br>		
+	</div>
+		<div id="historyfirst"></div>
+		<div id="historylast"></div>		
+	<hr>
+	<h1 id="answer"></h1>
+	<br>
+	<br>
+<!-- 	<input type="text" name="name" id="answertext" placeholder="Enter player Name" required/>
+	<input type="submit" name="submit" onclick="submitMe()" id="submitbutton"/> -->
+	<form action="#" onsubmit="submitMe();return false" autocomplete="off">
+	<!-- <input onKeyUp="handleKeyUp(20);" type="text" name="functioninput" VALUE="" style="font-size:10pt;width:34ex;"><br> -->
+	<input onKeyUp="showResults(this.value)" type="text" name="functioninput" id="answertext" style="font-size:10pt;width:200px;border-radius=10px;" placeholder="Search Player Name"/>
+	<input type="submit" name="submit" id="submitbutton" disabled="disabled" style="font-size:10pt;width:25x;background-color:gray;" value="SUBMIT"/><br>
+	<!-- <select onClick="handleSelectClick();" name="functionselect" size="20" style="font-size:10pt;width:34ex;"> -->
+	<!-- <select  onClick="handleSelectClick();" name="functionselect" id="functionselect"  size="5" style="font-size:10pt;width:34ex;" class="form-control" hidden></select> -->
+	<div id="result"></div>
+	</form>	
+	<br><br>
 </body>
 
 </html>
