--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-B1TW81HLYQ"></script>
@@ -198,31 +199,16 @@
 	<hr>
 	<br>
 	<div id="board">
-		<div id="glt"></div><br>		
-		<div id="try1"></div><br>
-		<div id="try2"></div><br>
-		<div id="try3"></div><br>
-		<div id="try4"></div><br>
-		<div id="try5"></div><br>
-		<div id="try6"></div><br>		
-	</div>
+		<div id="glt">GREEN LETTER TRACKER</strong></div>
 		<div id="historyfirst"></div>
-		<div id="historylast"></div>		
+		<div id="historylast"></div>
+		<div id="boardfirst"></div>
+		<div id="boardlast"></div>
+	</div>
+	<br>
 	<hr>
 	<h1 id="answer"></h1>
-	<br>
-	<br>
-    <div class="containers">
-      <form action="#" onsubmit="submitMe();return false" autocomplete="off" class="form">
-        <input type="text" placeholder="Search Player Name" class="search-field" / onKeyUp="showResults(this.value)" name="functioninput" id="answertext">
-        <!-- <button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled" > -->
-		<span  onclick="disablederror();">
-			<button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled" onClick="message('PUT MESSAGE HERE')" >
-			  <img src="search.png">
-			</button>
-		</span>
-      </form>
-    </div>
-	<div id="result"></div>
+	<br><br>
 </body>
+
 </html>
