--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-B1TW81HLYQ"></script>
@@ -49,10 +50,10 @@
 		<div id="stats">
 			<div id="stats-item">
 				<span id="60" class="stats-item">
-					<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.jpg">
+					<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
 				</span>
 				<span id="70" class="stats-item">
-					<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.jpg">
+					<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.png" style="width:40px;height:30px;"">
 				</span>
 			</div>
 		</div>
@@ -106,31 +107,29 @@
 			<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class="modal-body">
-			(i) <strong style="color:white;">TENIZ</strong> a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open Era.
-			The objective is to identify the Champion Tennis Player every day, using the <strong style="color:white;">Least Number Of Clues.</strong>
-			<br><br>	
-			(ii) Use the search area to key in your answer and Enter. A new clue will be revelaed
-			after each <strong style="color:white;">INCORRECT</strong> guess. 
+			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
+			Era. The objective is to identify the Champion Tennis Player every day, using the <strong style="color:white;">Least Number Of Clues.</strong>
 			<br><br>
-			(iii) Hints include Year, Slam, Country, Gender, Total GS Singles Titles and Style of Play (RH vs LH).	
-			Clues are revealed as shown below after each guess. 
+			(ii) Use the search area to key in your answer and hit Enter <img src="search.png"style="width:20px;height:20px;">. In the default (normal) mode, after each guess, you get clues to show how the player you entered, matched against the
+			attributes of the player in question. 
+			<br><br>
+			(iii) Attributes include Year won, Slam won, Country, Gender, Total GS Singles Titles and Style of Play (RH vs
+			LH). If a person has won mutliple Slams the reference will be for just 1 of their wins. The same player can
+			be repeated on another day with another of their wins.
+			<br><br>			
+			(iv) 🟢 Indicates a match, 🔴 indicates a no-match and 🟡 indicates that what you guessed is within a range of +/- 3 (valid for year and titles only). 🟡 for Country, indicates a match in the Continent.
+			<br><br>
+			(v) For eg: a 🟢 in the first position (year), indicates that the person you entered has won a GS in the
+			same year as in question. Similarly, a 🔴 in the second position (Slam), indicates that the person you entered has not won this
+			particular slam in question.
+			<br><br>			
+			(vi) You also have an option to switch to the Easy Mode any time during the game. In the Easy Mode the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess.
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
 			<br>
-			(iv) After each wrong guess, you get secondary clues, to show how the player you entered matched against the original clues (evaluated in order of original clues even if they are not yet revealed).<br>
-			🟢: Indicates a match and 🔴: indicates a no-match. 
-			<br><br>
-			(v) For eg: a 🟢 in the first position (year), indicates that the person you entered has won a GS in the same year as in question. 
-			<br><br>
-			(vi) Similarly, a 🔴 in the second position (Slam), indicates that the person you entered has not won this particular slam in question. 
-			Secondary clues might help you get to the player sooner, as you might get to know what a main clue is before they are revealed. 
 			<h5>
 				<center>Legend :AO - Australian Open | FO - French Open | WIM - Wimbledon | USO - US
-					Open | GS - Grand Slam | RH - Right Handed | LH - Left Handed
+					Open | GS - Grand Slam | RH - Right Handed | LH - Left Handed</center>
 			</h5>
-			</center>
-			<center>
-				<div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div>
-			</center>
 		</div>
 	</div>
 	<div class="summary" id="summary">
@@ -180,8 +179,12 @@
 				</div>
 			</div>
 		</div><br>
-		<div><a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @TenizGame</a>
-		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>			
+		<div><a href="https://twitter.com/TenizGame?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large"
+				data-show-count="false">Follow @TenizGame</a>
+			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<center>
+				<div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div>
+			</center>
 		</div>
 		<br>
 	</div>
@@ -193,33 +196,84 @@
 		</div>
 	</div>
 	<hr>
-	<br>
-	<div id="board">
-		<div id="glt"></div><br>		
-		<div id="try1"></div><br>
-		<div id="try2"></div><br>
-		<div id="try3"></div><br>
-		<div id="try4"></div><br>
-		<div id="try5"></div><br>
-		<div id="try6"></div><br>		
+	<div id="glt"></div>
+	<div id="board" class="scroll">
+		<div id="try1">	</div>
+			<div id="trydetail1" class="trydetail">
+				<div class="detail1">Year</div>
+				<div class="detail2">Slam</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div><br>
+		<div id="try2"></div>
+			<div id="trydetail2" class="trydetail">
+				<div class="detail1">Year</div>
+				<div class="detail2">Slam</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div><br>
+		<div id="try3"></div>
+			<div id="trydetail3" class="trydetail">
+				<div class="detail1">Year</div>
+				<div class="detail2">Slam</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div><br>		
+		<div id="try4"></div>
+			<div id="trydetail4" class="trydetail">
+				<div class="detail1">Year</div>
+				<div class="detail2">Slam</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div><br>		
+		<div id="try5"></div>
+			<div id="trydetail5" class="trydetail">
+				<div class="detail1">Year</div>
+				<div class="detail2">Slam</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div><br>		
+		<div id="try6"></div>
+			<div id="trydetail6" class="trydetail">
+				<div class="detail1">Year</div>
+				<div class="detail2">Slam</div>
+				<div class="detail3">Country</div>
+				<div class="detail4">Gender</div>
+				<div class="detail5">Titles</div>
+				<div class="detail6">Plays</div>		
+			</div><br><br><br>	
 	</div>
-		<div id="historyfirst"></div>
-		<div id="historylast"></div>		
+	<div id="historyfirst"></div>
+	<div id="historylast">
+	</div>	
+	<button id="MODEButton" class="buttonmode" onclick="changemode();">Switch To EASY MODE</button>	
 	<hr>
 	<h1 id="answer"></h1>
 	<br>
 	<br>
-    <div class="containers">
-      <form action="#" onsubmit="submitMe();return false" autocomplete="off" class="form">
-        <input type="text" placeholder="Search Player Name" class="search-field" / onKeyUp="showResults(this.value)" name="functioninput" id="answertext">
-        <!-- <button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled" > -->
-		<span  onclick="disablederror();">
-			<button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled" >
-			  <img src="search.png">
-			</button>
-		</span>
-      </form>
-    </div>
+	<div class="containers">
+		<form action="#" onsubmit="submitMe();return false" autocomplete="off" class="form">
+			<input type="text" placeholder="Search Player Name" class="search-field" / onKeyUp="showResults(this.value)"
+				name="functioninput" id="answertext">
+			<!-- <button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled" > -->
+			<span onclick="disablederror();">
+				<button type="submit" class="search-button" name="submit" id="submitbutton" disabled="disabled">
+					<img src="search.png">
+				</button>
+			</span>
+		</form>
+	</div>
 	<div id="result"></div>
 </body>
+
 </html>
