--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 	<div id="tsparticles"></div>
 	<div id="title">
 		<div class="waviy1">
-			<span style="--i:1">Z</span>
-			<span style="--i:2">I</span>
-			<span style="--i:3">N</span>
+			<span style="--i:1">A</span>
+			<span style="--i:2">L</span>
+			<span style="--i:3">L</span>
 			<span style="--i:4">E</span>
-			<span style="--i:5">T</span>
+			<span style="--i:5">Z</span>
 		</div>
 		<div id="stats">
 			<div id="stats-item">
