--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
 			Era. The objective is to identify the Champion Tennis Player every day, using the <strong style="color:white;">Least Number Of Clues.</strong>
 			<br><br>
-			(ii) The mystery player needs to be identified based on attributes that include Year won, Slam won, Country, Gender, Total GS Singles Titles and Style of Play (RH vs
-			LH). If a person has won mutliple Slams the attributes (shown at the top of the page) will be for just 1 of their wins. The same player can	be repeated on another day with another of their wins.
+			(ii) The mystery player needs to be identified based on attributes (shown at the top of the page) of <strong style="color:white;">1 of their GS Wins</strong>, that include Year won, Slam won, Country (at the time of win), Gender, Total GS Singles Titles and Style of Play (RH vs
+			LH). If a person has won mutliple Slams the same player can	be repeated on another day with another of their wins.
 			<br><br>			
 			(iii) Use the search area to key in your answer and hit Enter <img src="search.png"style="width:20px;height:20px;">. After each guess, you get clues to show how the player you entered, matched against the
 			attributes of the player in question. 
@@ -119,7 +119,7 @@
 			(iv) 🟢 Indicates a match, 🔴 indicates a no-match and 🟡 indicates that what you guessed is within a range of +/- 3 (for year and titles only). 🟡 for Country, indicates a match in the Continent.
 			<br><br>
 			(v) For eg: a 🟢 in the first position (year), indicates that the person you entered has won a GS in the same year as in question. Similarly, a 🔴 in the second position (Slam), indicates that the person you entered has not won this
-			particular slam in question.
+			particular slam in question. It<strong style="color:white;"> DOES NOT </strong>mean that the mystery player has not won this GS.
 			<br><br>			
 			(vi) You also have an option to switch to the Easy Mode any time during the game. In the Easy Mode the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess.
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
