--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
 				</strong></div>
 			<button data-close-button class="close-button">&times;</button>
 		</div>
-		<div class="modal-body">
+		<div class="modal-body Contents">
+			<p id="text-area">
+
 			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
 			Era. The objective is to identify the Champion Tennis Player every day, using the Clues. The Rules are quite different from that of WORDLE, so please read this section carefully. 
 			<br><br>
@@ -126,6 +128,9 @@
 			<h5>
 				<center>Legend :AO - Australian Open | FO - French Open | WIM - Wimbledon | USO - US Open | GS - Grand Slam | RH - Right Handed | LH - Left Handed</center>
 			</h5>
+
+
+			</p>		
 		</div>
 	</div>
 	<div class="summary" id="summary">
