--- a/index.html
+++ b/index.html
@@ -120,12 +120,15 @@
 			<br><br>
 			(v) For eg: a 🟢 in the first position (Year), indicates that the player you entered has won some GS in the same year as in question. A 🔴 in the first position (Year), indicates that the player you entered has not won any GS in the year as in question. It <strong style="color:white;"> DOES NOT </strong> mean that the player your entered and the mystery player has not won a GS in the same year. Remember, only <strong style="color:white;">ONE </strong>win of the mystery player is being compared here.
 			<br><br>
-			(vi) Similarly, a 🔴 in the second position (Slam), indicates that the person you entered has not won the particular slam in question. It has <strong style="color:white;"> NOTHING </strong> to do with what the mystery player has won or not. For eg. if your player has won the FO and the USO, and you get 🔴 for the second position (Slam), it simply means that this particular Win of the mystery player is either WIM or AO. He/She could have won the FO or the USO at a different time in their career. Remember the indicators are shown for the attributes of <strong style="color:white;">YOUR </strong>player and not for the mystery player.
+			(vi) Similarly, a 🔴 in the second position (Slam), indicates that the person you entered has not won the particular slam in question. For eg. if your player has won the FO and the USO, and you get a 🔴 for the second position (Slam), it simply means that this particular Win of the mystery player is either the WIM or AO. They might (or not) have won the FO or the USO at a different time in their career. 
 			<br><br>			
-			(vi) You also have an option to switch to the Easy Mode any time during the game. In the Easy Mode the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess. The clues are more direct in the Easy Mode.  
+			(vi) You also have an option to switch to the Easy Mode any time during the game. In the Easy Mode the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess. The clues are more direct in this Mode.  
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
 			<h5>
 				<center>Legend :AO - Australian Open | FO - French Open | WIM - Wimbledon | USO - US Open | GS - Grand Slam | RH - Right Handed | LH - Left Handed</center>
+			</h5>
+			<h5>
+				<center>©️sank0403 - 2022</center>
 			</h5>
 			</p>		
 		</div>
