--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
 		<span style="--i:19">d</span>
 		<span style="--i:20">a</span>
 		<span style="--i:21">y</span>
-		<span style="--i:22">!</span>
+		<span style="--i:22">-</span>
+		<span style="--i:23">D</span>
+		<span style="--i:24">A</span>
+		<span style="--i:25">Y</span>
+		<span style="--i:26" id="daycount"></span>
 	</div>
 	<!-- <div id="mycounter"></div> -->
 	<!-- <button data-modal-target="#modal">Start Game</button>  -->
@@ -121,7 +125,7 @@
 			(vii) Switch to the <strong style="color:white;">EASY </strong>Mode any time during the game, where the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess. The clues are more direct in this Mode.  
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
 			<br>
-			(viii) On your final try you have the option to look at an <strong style="color:white;">Additional Hint </strong>. This is an absolute give-away 😀!
+			(viii) On your final try, after you have enabled the easy mode, you have the option to look at an <strong style="color:white;">Additional Hint </strong>. This is an absolute give-away 😀!
 			<br>
 			<h5>
 			<hr>
