--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		<div class="modal-body Contents">
 			<p id="text-area">
 			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
-			Era. The objective is to identify the Champion Tennis Player every day, using the Clues. The Rules are quite different from that of WORDLE, so please read this section carefully. 
+			Era. The objective is to identify the Champion Tennis Player every day, using the Clues. <strong style="color:white;"><a href = "https://youtu.be/hxfDhdt-29I" target="_" class="youtube"><u>Check out a Video I made about the game here</a></u></strong>, and then read the rest of this page to learn more. 
 			<br><br>
 			(ii) The mystery player needs to be identified based on attributes (shown at the top of the page) of <strong style="color:white;">ONE OF THEIR GS WINS.</strong> These attributes include Year won, Slam won, Country (at the time of win), Gender, Total GS Singles Titles and Style of Play (RH vs
 			LH). If a person has won mutliple Slams, the same player can be repeated on another day with another of their Wins.
@@ -122,10 +122,10 @@
 			<br><br>
 			(vi) Similarly, a 🔴 in the second position (Slam), indicates that the person you entered has not won the particular slam in question. For eg. if your player has won the FO and the USO, and you get a 🔴 for the second position (Slam), it simply means that this particular Win of the mystery player is either the WIM or AO. They might (or not) have won the FO or the USO at a different time in their career. 
 			<br><br>				
-			(vii) Switch to the <strong style="color:white;">EASY </strong>Mode any time during the game, where the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess. The clues are more direct in this Mode.  
+			(vii) Switch to the <strong style="color:white;">EASY Mode</strong> any time during the game, where the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess. The clues are more direct in this Mode.  
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
 			<br>
-			(viii) On your final try, after you have enabled the easy mode, you have the option to look at an <strong style="color:white;">Additional Hint </strong>. This is an absolute give-away 😀!
+			(viii) On your <strong style="color:white;">Final Try</strong>, after you have enabled the Easy Mode, you have the option to look at an <strong style="color:white;">ADDITIONAL HINT </strong>. This is an absolute give-away 😀!
 			<br>
 			<h5>
 			<hr>
